turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:3: error: ')' expected but integer literal found.
for (k <- 1 to 10 000) {
                  ^LangtonsAnt:20: error: illegal start of simple expression
}
^